# STRIDE-QA-Dataset

./: .gitignore  README.md
benchmarks/STRIDE-QA-Bench/: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/STRIDE-QA-Bench/config/: prompt.yaml  tolerance.yaml
benchmarks/STRIDE-QA-Bench/scripts/: inference_internvl2_5.sh  inference_qwen2_5_vl.sh  strideqa_bench.sh
benchmarks/STRIDE-QA-Bench/scripts/common/: runtime_env.sh
benchmarks/STRIDE-QA-Bench/src/strideqa_bench/: __init__.py  benchmark.py
benchmarks/STRIDE-QA-Bench/src/strideqa_bench/inference/: inference.py  inference_args.py  vlm_interface.py
benchmarks/STRIDE-QA-Bench/src/strideqa_bench/inference/models/: inference_internvl2_5.py  inference_qwen2_5_vl.py
benchmarks/STRIDE-QA-Bench/src/strideqa_bench/inference/utils/: distributed.py  load.py  som.py  video.py
benchmarks/STRIDE-QA-Bench/src/strideqa_bench/utils/: evaluate_utils.py  metric_utils.py  parser.py  som.py  som_utils.py
benchmarks/STRIDE-QA-Bench/src/strideqa_bench/visualize/: compare_polar_plots.py  create_lsr_relation_plots.py  visualize.py
